<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.tetris.viewmodel.MainMenuViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:contentDescription="@string/description_background"
            android:scaleType="centerCrop"
            android:src="@drawable/background_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:onClick="@{viewModel::onClickStart}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highScore"
            app:layout_constraintVertical_bias="0.337" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_score"
            android:onClick="@{viewModel::onClickReset}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/quit_button"
            android:onClick="@{viewModel::onClickQuit}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReset"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/changa_font_family"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/raleway_font_family"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@{@string/current_high_score + viewModel.currentHighScore}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>