<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.tetrisapp.viewmodel.GameViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GameActivity">

        <ImageButton
            android:id="@+id/btnRotateLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/rotate_left_desc"
            android:src="@drawable/rotate_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/btnRotateRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/rotate_right_arrow"
            android:src="@drawable/rotate_right"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/btnMoveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRotateLeft"
            app:tint="@color/black"
            android:contentDescription="@string/move_left_arrow" />

        <ImageButton
            android:id="@+id/btnMoveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRotateRight"
            app:tint="@color/black"
            android:contentDescription="@string/move_right_arrow" />

        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/raleway_font_family"
            android:text="@{@string/level + ' ' + viewModel.level}"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/level" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_font_family"
            android:text="@{@string/score + ' ' + viewModel.score}"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLines"
            tools:text="@string/score" />

        <TextView
            android:id="@+id/tvLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@{@string/lines + ' ' + viewModel.lines}"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLevel"
            tools:text="@string/lines" />

        <ImageView
            android:id="@+id/ivNextPiece"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="56dp"
            android:alpha="0.7"
            android:contentDescription="@string/iv_next_piece_desc"
            android:src="@{viewModel.nextTetromino ?? @drawable/i_tetromino}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


