<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GameActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flTextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="tvScore,tvLevel,tvLines"
        app:flow_horizontalAlign="start"
        app:layout_constraintBottom_toBottomOf="@+id/ivNextPiece"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivNextPiece"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flButtonsRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="btnRotateRight,btnMoveRight"
        app:flow_verticalGap="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flButtonsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="btnRotateLeft,btnMoveLeft"
        app:flow_verticalGap="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnRotateLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:src="@drawable/rotate_left"
        app:tint="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="314dp" />

    <ImageButton
        android:id="@+id/btnRotateRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:src="@drawable/rotate_right"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/btnMoveLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:src="@drawable/arrow_left"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/btnMoveRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:src="@drawable/arrow_right"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_font_family"
        android:text="@string/level"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_font_family"
        android:text="@string/score"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semi_bold"
        android:text="@string/lines"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ivNextPiece"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>